--- a/project.yaml
+++ b/project.yaml
@@ -1,12 +1,13 @@
 version: '3.0'
 
 expectations:
-  population_size: 1000
+  population_size: 50000
 
 actions:
 
-  generate_study_population:
+  generate_cohort:
     run: cohortextractor:latest generate_cohort --study-definition study_definition
     outputs:
       highly_sensitive:
-        cohort: output/input.csv
+        cohort: output/input617.csv
+
