--- a/project.yaml
+++ b/project.yaml
@@ -9,5 +9,5 @@ actions:
     run: cohortextractor:latest generate_cohort --study-definition study_definition
     outputs:
       highly_sensitive:
-        cohort: output/input617.csv
+        cohort: output/input.csv
 
